# warehouse

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env-example  manage.py  pyproject.toml
backend/api/: urls.py
backend/api/common/: enums.py  permissions.py  protocols.py  serializers.py  spectacular_schema.py  types.py  validatiors.py  views.py
backend/api/token/: token_serializer.py  token_view.py
backend/api/v1/: urls.py
backend/api/v1/unit/: urls.py
backend/api/v1/unit/serializers/: __init__.py  unit.py
backend/api/v1/unit/views/: __init__.py  unit.py
backend/api/v1/users/: urls.py
backend/api/v1/users/serializers/: __init__.py  user_crud.py
backend/api/v1/users/views/: __init__.py  user_crud.py
backend/api/v1/warehouse/: urls.py
backend/api/v1/warehouse/serializers/: __init__.py  categories.py  common.py  file_attachment.py  material.py  product.py  product_component.py  resource.py  warehouse.py
backend/api/v1/warehouse/views/: __init__.py  categories.py  file_attachment.py  material.py  (+4 more)
backend/apps/common/models/: __init__.py  choices.py  managers.py  models.py
backend/apps/unit/: apps.py  services.py
backend/apps/unit/migrations/: 0001_initial.py  0002_unitgrouptranslation_unit_unitgr_group_i_ddbeae_idx_and_more.py
backend/apps/unit/models/: __init__.py  unit.py  unit_group.py
backend/apps/users/: admin.py  apps.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/models/: __init__.py  user.py  user_info.py
backend/apps/warehouse/: apps.py  choices.py
backend/apps/warehouse/migrations/: 0001_initial.py
backend/apps/warehouse/models/: __init__.py  abs_storage_entity.py  category.py  file_attachment.py  material.py  product_component.py  products.py  resource.py  warehouse.py
backend/apps/warehouse/services/: dto.py
backend/apps/warehouse/validators/: category.py
backend/json_data/: currencies.json  units.json
backend/json_data/units/: units.json  units_en.json  units_ru.json
backend/src/: settings.py  urls.py
backend/tests/: conftest.py
backend/tests/common/: __init__.py  drf_api_client.py
(+25 files in other folders)
